--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>ParksAndPlants</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +12,8 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' %>
     <%= yield %>
+    <%#= javascript_pack_tag "application", 'data-turbolinks-track': 'reload' %>    <!-- from app/javascript/packs/application.js -->
   </body>
 </html>
