--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -16,3 +16,8 @@
   color: white;
   text-shadow: 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847, 0 0 2px #006847;
 }
+
+.garden-banner {
+  background-size:cover;
+  height: 500px;
+}
