--- a/app/assets/stylesheets/pages/_garden.scss
+++ b/app/assets/stylesheets/pages/_garden.scss
@@ -9,7 +9,7 @@
 .flex-align {
     display:flex;
     align-items:center;
-    justify-content:space-between
+    justify-content:space-between;
 }
 
 .garden-card {
@@ -29,14 +29,14 @@
 
 .garden-card-content {
     padding:24px;
-    background-color:#F8F9FA
+    background-color:#F8F9FA;
 }
 
 .garden-card-actions {
     position:relative;
     background-color:inherit;
     border-top:1px solid rgba(160,160,160,0.2);
-    padding:16px 24px
+    padding:16px 24px;
 }
 
 .garden-form {
