--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -1,10 +1,10 @@
-<%= simple_form_for(garden) do |f| %>
-  <% if garden.errors.any? %>
+<%= simple_form_for(plant) do |f| %>
+  <% if plant.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(garden.errors.count, "error") %> prohibited this garden from being saved:</h2>
+      <h2><%= pluralize(plant.errors.count, "error") %> prohibited this plant from being saved:</h2>
 
       <ul>
-        <% garden.errors.full_messages.each do |message| %>
+        <% plant.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
@@ -13,10 +13,6 @@
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :banner_url%>
-    <%= f.text_field :banner_url, class: 'form-control' %>
   </div>
 
   <div class="mt-3">
