--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/flats">My Pretty Little Garden</a>
+<nav class="navbar navbar-expand-lg navbar-light green-color">
+      <a class="navbar-brand" href="/gardens">My Pretty Little Garden</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search" value="">
+          <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+        </form>
         <div class="ml-auto flex">
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search" value="">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
           </form>
-          <a class="btn btn-outline-primary my-2 my-sm-0 ml-2" href="/flats/new">Add Garden</a>
+          <a class="btn btn-outline-primary my-2 my-sm-0 ml-2" href="/gardens/new">Add Garden</a>
         </div>
       </div>
 </nav>
